--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script><link rel="stylesheet" href="">
     
     <!-- Made with love by Feeldream -->
-    <title>S.id/suratuntukTiffany</title>
+    <title>Surat Untuk Tiffany</title>
     <style>
       *{margin:0;padding:0;box-sizing:border-box;}
       body{overflow:hidden;display:flex;flex-direction:column;justify-content:center;align-items:center;font-family:"Sriracha",serif;background-color:#000;gap:14px;}
